docs: upload thesis draft milestone

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -351,6 +351,25 @@ doi = {10.3928/01484834-20140325-04}
   howpublished = {\url{https://ncss-wpengine.netdna-ssl.com/wp-content/themes/ncss/pdf/Procedures/NCSS/Negative_Binomial_Regression.pdf}}
 }
 
+@article{large-scale-object-detection,
+  author    = {Junran Peng and
+               Xingyuan Bu and
+               Ming Sun and
+               Zhaoxiang Zhang and
+               Tieniu Tan and
+               Junjie Yan},
+  title     = {Large-Scale Object Detection in the Wild from Imbalanced Multi-Labels},
+  journal   = {CoRR},
+  volume    = {abs/2005.08455},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2005.08455},
+  eprinttype = {arXiv},
+  eprint    = {2005.08455},
+  timestamp = {Mon, 20 Sep 2021 16:49:58 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2005-08455.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 % http://cs229.stanford.edu/proj2017/final-reports/5226723.pdf
 
 % https://arxiv.org/pdf/1710.11374.pdf
