--- a/models/yolov5/test.ipynb
+++ b/models/yolov5/test.ipynb
@@ -21,8 +21,17 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "cf27d97dcf4be97ac4b24b0958c44b40d000600328bb3db0f801b46df5aa5b85"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 ('venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
