docs: improved models docs

--- a/models/yolov5/val.ipynb
+++ b/models/yolov5/val.ipynb
@@ -1,12 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validate YOLOv5s Models\n",
+    "\n",
+    "This notebook is used to validate various YOLOv5s models that were trained in `train.ipynb`.\n",
+    "\n",
+    "## Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32"
+    "batch_size = 32 # # The maximum batch size the GPU memory will allow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validate\n",
+    "\n",
+    "The validation results can be found in `yolov5/runs/val` within the directory named by the `--name` argument."
    ]
   },
   {
