docs: add updated report and execute summary source

--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -316,7 +316,8 @@ keywords = {Cleaning Index, Street cleanliness, Sweeping}
 author = {Ping, Ping and Kumala, Effendy and Gao, Jerry and Xu, Guoyan},
 year = {2020},
 month = {02},
-title = {Smart street litter detection and classification based on Faster R-CNN and edge computing}
+title = {Smart street litter detection and classification based on Faster R-CNN and edge computing},
+page = 5
 }
 
 @article{understanding-poisson,
@@ -328,6 +329,13 @@ title = {Understanding Poisson Regression},
 volume = {53},
 journal = {The Journal of nursing education},
 doi = {10.3928/01484834-20140325-04}
+}
+
+@misc{simd-technical-notes,
+author = {Scottish Government},
+year = {2020},
+page = 6,
+howpublished = {\url{https://www.gov.scot/binaries/content/documents/govscot/publications/statistics/2020/09/simd-2020-technical-notes/documents/simd-2020-technical-notes/simd-2020-technical-notes/govscot\%3Adocument/SIMD\%2B2020\%2Btechnical\%2Bnotes.pdf}}
 }
 
 @book{cameron_trivedi_2013, place={Cambridge}, edition={2}, series={Econometric Society Monographs}, title={Regression Analysis of Count Data}, DOI={10.1017/CBO9781139013567}, publisher={Cambridge University Press}, author={Cameron, A. Colin and Trivedi, Pravin K.}, year={2013}, collection={Econometric Society Monographs}}
@@ -351,6 +359,20 @@ doi = {10.3928/01484834-20140325-04}
   howpublished = {\url{https://ncss-wpengine.netdna-ssl.com/wp-content/themes/ncss/pdf/Procedures/NCSS/Negative_Binomial_Regression.pdf}}
 }
 
+@misc{breakdown-yolo4,
+  title = {A Thorough Breakdown of Yolo4},
+  author = {Jacob Solawetz},
+  howpublished = {\url{https://blog.roboflow.com/a-thorough-breakdown-of-yolov4/}}
+}
+
+@misc{broken-windows,
+  title = {Broken Windows},
+  author = {George Kelling and James Wilson},
+  publisher = {The Atlantic},
+  howpublished = {\url{https://www.theatlantic.com/magazine/archive/1982/03/broken-windows/304465/?single_page=true}},
+  year = 1982
+}
+
 @article{large-scale-object-detection,
   author    = {Junran Peng and
                Xingyuan Bu and
@@ -370,14 +392,115 @@ doi = {10.3928/01484834-20140325-04}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-% http://cs229.stanford.edu/proj2017/final-reports/5226723.pdf
+@Article{Baker2016,
+author={Baker, Monya},
+title={1,500 scientists lift the lid on reproducibility},
+journal={Nature},
+year={2016},
+month={May},
+day={01},
+volume={533},
+number={7604},
+pages={452-454},
+abstract={Survey sheds light on the `crisis' rocking research.},
+issn={1476-4687},
+doi={10.1038/533452a},
+url={https://doi.org/10.1038/533452a}
+}
 
-% https://arxiv.org/pdf/1710.11374.pdf
+@article{cutmix,
+  author    = {Sangdoo Yun and
+               Dongyoon Han and
+               Seong Joon Oh and
+               Sanghyuk Chun and
+               Junsuk Choe and
+               Youngjoon Yoo},
+  title     = {CutMix: Regularization Strategy to Train Strong Classifiers with Localizable
+               Features},
+  journal   = {CoRR},
+  volume    = {abs/1905.04899},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.04899},
+  eprinttype = {arXiv},
+  eprint    = {1905.04899},
+  timestamp = {Tue, 28 May 2019 12:48:08 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1905-04899.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
-% https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8793975&tag=1
+@article{spp,
+  author    = {Kaiming He and
+               Xiangyu Zhang and
+               Shaoqing Ren and
+               Jian Sun},
+  title     = {Spatial Pyramid Pooling in Deep Convolutional Networks for Visual
+               Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1406.4729},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1406.4729},
+  eprinttype = {arXiv},
+  eprint    = {1406.4729},
+  timestamp = {Wed, 17 Apr 2019 17:23:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/HeZR014.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
-% https://ncss-wpengine.netdna-ssl.com/wp-content/themes/ncss/pdf/Procedures/NCSS/Negative_Binomial_Regression.pdf
+@INPROCEEDINGS{cspnet,
 
-% https://www.cambridge.org/core/books/modeling-count-data/BFEB3985905CA70523D9F98DA8E64D08
+  author={Wang, Chien-Yao and Mark Liao, Hong-Yuan and Wu, Yueh-Hua and Chen, Ping-Yang and Hsieh, Jun-Wei and Yeh, I-Hau},
 
-% http://cameron.econ.ucdavis.edu/racd/count.html
+  booktitle={2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)}, 
+
+  title={CSPNet: A New Backbone that can Enhance Learning Capability of CNN}, 
+
+  year={2020},
+
+  volume={},
+
+  number={},
+
+  pages={1571-1580},
+
+  doi={10.1109/CVPRW50498.2020.00203}}
+
+@article{panet,
+  author    = {Shu Liu and
+               Lu Qi and
+               Haifang Qin and
+               Jianping Shi and
+               Jiaya Jia},
+  title     = {Path Aggregation Network for Instance Segmentation},
+  journal   = {CoRR},
+  volume    = {abs/1803.01534},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1803.01534},
+  eprinttype = {arXiv},
+  eprint    = {1803.01534},
+  timestamp = {Wed, 11 Sep 2019 15:40:23 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1803-01534.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@misc{poisson-wikipedia,
+   author = "Wikipedia",
+   title = "{Poisson distribution} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2022",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Poisson\%20distribution&oldid=1080133188}},
+   note = "[Online; accessed 15-April-2022]"
+ }
+ 
+ @misc{yolov5-hyperparam,
+   author = "Ultralytics",
+   title = "Hyperparameter Evolution",
+   year = "2022",
+   howpublished = {\url{https://docs.ultralytics.com/tutorials/hyperparameter-evolution}}
+ }
+
+ @misc{leams,
+   author = "Keep Scotland Beautiful",
+   title = "Local Environment Audit and Management System (LEAMS)",
+   year = "2022",
+   howpublished = {\url{https://www.keepscotlandbeautiful.org/environmental-services/leams}}
+ }
