--- a/models/yolov5/val.ipynb
+++ b/models/yolov5/val.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32 # # The maximum batch size the GPU memory will allow."
+    "batch_size = 32 # The maximum batch size the GPU memory will allow."
    ]
   },
   {
@@ -169,7 +169,7 @@
    ],
    "source": [
     "%%time\n",
-    "!python yolov5/val.py --batch-size $batch_size --data cfg/mosaic-x2-data.yaml --weights yolov5/runs/train/mosaic-x3/weights/best.pt --name mosaic--x2"
+    "!python yolov5/val.py --batch-size $batch_size --data cfg/mosaic-x2-data.yaml --weights yolov5/runs/train/mosaic-x3/weights/best.pt --name mosaic-x2"
    ]
   },
   {
@@ -215,7 +215,7 @@
    ],
    "source": [
     "%%time\n",
-    "!python yolov5/val.py --batch-size $batch_size --data cfg/mosaic-x3-data.yaml --weights yolov5/runs/train/mosaic-x3/weights/best.pt --name mosaic--x3"
+    "!python yolov5/val.py --batch-size $batch_size --data cfg/mosaic-x3-data.yaml --weights yolov5/runs/train/mosaic-x3/weights/best.pt --name mosaic-x3"
    ]
   }
  ],
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
