feat: updated report

--- a/report/executive-summary.tex
+++ b/report/executive-summary.tex
@@ -6,6 +6,7 @@
  total={170mm,280mm},
  left=20mm,
  top=0mm,
+ bottom=0mm,
 }
 
 
@@ -14,7 +15,8 @@
 \title{Regressing Litter on Deprivation in Glasgow City with Object Detection}
 \author{Gary Blackwood}
 \date{\today}
-\maketitle  
+\maketitle
+\thispagestyle{empty} % No page number
 
 \subsubsection*{Introduction}
 
@@ -31,19 +33,21 @@ The Glasgow City subset of the Scottish Index of Multiple Deprivation (SIMD) dat
 
 \subsubsection*{Methods}
 
-Assorted You Only Look Once (YOLO) and Faster Region-Based Convolutional Neural Network (Faster R-CNN) object detection models were developed using the Google street view images of Glasgow City. Data pre-processing and augmentation techniques were applied to find the model variation that performed best at detecting litter. The chosen model was applied to fifty street view images per data zone in order to produce a quantification of litter.
+Assorted You Only Look Once (YOLO) and Faster Region-Based Convolutional Neural Network (Faster R-CNN) object detection models were developed using the Google street view images of Glasgow City. Image pre-processing, image augmentation, and hyperparameter tuning techniques were applied to find the model variation that performed best at detecting litter. The chosen model was applied to fifty street view images per data zone in order to produce a quantification of litter.
 
-Count data regression was performed on the extended SIMD data set using Poisson and Negative Binomial models with the objective of identifying potential relationships between deprivation and litter. The response variable was the number of litter objects detected within fifty street view images of a SIMD data zone. The potential explanatory variables were the key indicators of deprivation provided by the SIMD. Exploratory data analysis and forward stepwise variable selection were performed to determine the most promising predictors.
+Count data regression was performed on the extended SIMD data set using Poisson and Negative Binomial models, with the objective of identifying potential relationships between deprivation and litter. The response variable was the number of litter objects detected within fifty street view images of a SIMD data zone. The potential explanatory variables were the key indicators of deprivation provided by the SIMD. Exploratory data analysis and forward stepwise variable selection were performed to determine the most promising explanatory variables.
 
 \subsubsection*{Results}
 
-A YOLOv5s litter detection model that had been trained using mosaic and noise augmentation image data was chosen as the final model as it produced the best mean average precision of 58.19. It was found to generalise well to unseen data by producing a true positive rate of 86\% on an unseen test data set. It found 7,732 litter objects within 746 data zones when applied with a confidence threshold of 80\%.
+A YOLOv5s litter detection model that had been trained using mosaic and noise augmented image data was chosen as the final model as it produced the best mean average precision of 58.2. It was found that it may generalise well to new data as it produced a true positive rate of 77\% on an unseen test data set containing 254 litter objects, with only 28 false positives. When applied to 37,300 images of Glasgow City it found 7,732 litter objects within 746 data zones using a confidence threshold of 80\%.
 
-The Poisson regression model was found not to fit well to the data. Additional variance was accounted for by fitting a Negative Binomial model. This produced an adequate fit and suggested that there was a relationship between litter and the number of working age individuals with no qualifications. However, this could not be concluded after accounting for statistical significance through random chance.
+The Poisson regression model was found not to fit well to the data. Additional variance was accounted for by fitting a Negative Binomial model. This produced an adequate fit and suggested that there was a relationship between litter and the number of working age individuals with no qualifications. However, this could not be concluded after testing the variable selection hypothesis showed that the relationship was not statistically significant at a significance threshold of $\alpha = 0.05$.
+
+A web application was developed and made publicly available at glasgow-litter.garyblackwood.co.uk to increase the accessibility of the results. Users are able to interactively explore the detected litter throughout the city and apply the model to their own uploaded images.
 
 \subsubsection*{Recommendations and Conclusion}
 
-None of the potential explanatory deprivation indicators were statistically significant. For this reason, no single area of focus could be recommended to reduce littering. However, it was acknowledged that insights may be gained by removing certain limiting factors to improve the methods used. By using increased quantities of hardware resources and high resolution images over time, local organisation may be able to use resulting data to make informed policy decisions.
+None of the potential explanatory deprivation indicators were statistically significant. For this reason, no single area of focus could be recommended to reduce littering. However, it was acknowledged that insights may be gained by removing certain limiting factors to improve the methods used. By using increased quantities of hardware resources and high resolution images over time, local organisation may be able to use the resulting insights to make informed policy decisions.
 
 The feasibility of using an automated approach to counting litter on a city scale was confirmed. By successfully applying object detection to 37,300 street view images, it was established that the approach has the potential to not only be scaled up within Glasgow City, but also over to other locations within Scotland.
     
