--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -487,8 +487,7 @@ url={https://doi.org/10.1038/533452a}
    author = "Wikipedia",
    title = "{Poisson distribution} --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2022",
-   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Poisson\%20distribution&oldid=1080133188}},
-   note = "[Online; accessed 15-April-2022]"
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Poisson\%20distribution&oldid=1080133188}}
  }
  
  @misc{yolov5-hyperparam,
@@ -503,4 +502,39 @@ url={https://doi.org/10.1038/533452a}
    title = "Local Environment Audit and Management System (LEAMS)",
    year = "2022",
    howpublished = {\url{https://www.keepscotlandbeautiful.org/environmental-services/leams}}
+ }
+
+@article{OBrien2019LookingTB,
+  title={Looking Through Broken Windows: The Impact of Neighborhood Disorder on Aggression and Fear of Crime Is an Artifact of Research Design},
+  author={Daniel T. O’Brien and Chelsea Farrell and Brandon C. Welsh},
+  journal={Annual Review of Criminology},
+  year={2019}
+}
+
+ @misc{roboflow-contrast,
+   author = "Joseph Nelson",
+   title = "When To Use Contrast As A Preprocessing Step",
+   year = "2020",
+   howpublished = {\url{https://blog.roboflow.com/when-to-use-contrast-as-a-preprocessing-step/}}
+ }
+
+@misc{law-geog-wikipedia,
+   author = "Wikipedia",
+   title = "{Tobler's first law of geography} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2022",
+   howpublished = {\url{https://en.wikipedia.org/wiki/Tobler\%27s_first_law_of_geography}}
+ }
+ 
+ @misc{testing-hyp-wikipedia,
+   author = "Wikipedia",
+   title = "{Testing hypothesis suggested by the data} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2022",
+   howpublished = {\url{https://en.wikipedia.org/wiki/Testing_hypotheses_suggested_by_the_data}}
+ }
+ 
+  @misc{better-training-results,
+   author = "Ultralytics",
+   title = "Tips for Best Training Results",
+   year = "2022",
+   howpublished = {\url{https://github.com/ultralytics/yolov5/wiki/Tips-for-Best-Training-Results}}
  }
