docs: document known bug in PyTorch

--- a/models/yolov5/test.ipynb
+++ b/models/yolov5/test.ipynb
@@ -35,7 +35,10 @@
     "\n",
     "The confidence threshold is set to 80% and the IoU threshold is set to 60% (YOLO default).\n",
     "\n",
-    "Out of 254 litter labels, 196 were detected as true positives (77%), 57 as false negatives (23%), and there were an additional 28 false positives."
+    "Out of 254 litter labels, 196 were detected as true positives (77%), 57 as false negatives (23%), and there were an additional 28 false positives.\n",
+    "\n",
+    "Note: The exceptions in the output are due to a [known bug](https://github.com/pytorch/pytorch/issues/74016) in PyTorch. They do not impact the result.\n",
+    "\n"
    ]
   },
   {
