--- a/report/executive-summary.tex
+++ b/report/executive-summary.tex
@@ -39,7 +39,7 @@ Count data regression was performed on the extended SIMD data set using Poisson 
 
 \subsubsection*{Results}
 
-A YOLOv5s litter detection model that had been trained using mosaic and noise augmented image data was chosen as the final model as it produced the best mean average precision of 58.2. It was found that it may generalise well to new data as it produced a true positive rate of 77\% on an unseen test data set containing 254 litter objects, with only 28 false positives. When applied to 37,300 images of Glasgow City it found 7,732 litter objects within 746 data zones using a confidence threshold of 80\%.
+A YOLOv5s litter detection model that had been trained using mosaic and noise augmented image data was chosen as the final model as it produced the best mean average precision of 58.2. It was found that it may generalise well to new data as it produced a true positive rate of 77\% on an unseen test data set containing 254 littered objects, with only 28 false positives. When applied to 37,300 images of Glasgow City it found 7,732 litter objects within 746 data zones using a confidence threshold of 80\%.
 
 The Poisson regression model was found not to fit well to the data. The additional variance was accounted for by fitting a Negative Binomial model. This produced an adequate fit and suggested that there was a relationship between litter and the number of working-age individuals with no qualifications. However, this could not be concluded after testing the variable selection hypothesis showed that the relationship was not statistically significant at a significance threshold of $\alpha = 0.05$.
 
@@ -49,6 +49,6 @@ A web application was developed and made publicly available at glasgow-litter.ga
 
 None of the potential explanatory deprivation indicators were statistically significant. For this reason, no single area of focus could be recommended to reduce littering. However, it was acknowledged that insights may be gained by removing certain limiting factors to improve the methods used. By using increased quantities of hardware resources and high-resolution images over time, local organisations may be able to use the resulting insights to make informed policy decisions.
 
-The feasibility of using an automated approach to counting litter on a city scale was confirmed. By successfully applying object detection to 37,300 street view images, it was established that the approach has the potential to not only be scaled up within Glasgow City but also over to other locations within Scotland.
+The feasibility of using an automated approach to count litter on a city scale was confirmed. By successfully applying object detection to 37,300 street view images, it was established that the approach has the potential to not only be scaled up within Glasgow City, but also to other locations within Scotland.
     
 \end{document}
