--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -15,7 +15,7 @@
 
 \begin{abstract}
 
-This study explored the relationship between deprivation in Glasgow City and the amount of litter on its streets. It also aimed to discover if an automated approach to quantifying litter on a city-scale could be achieved using object detection methods. A YOLOv5s object detection model was developed and applied to detect litter in 37,300 Google street view images of locations all over Glasgow City. The detected litter was enumerated and made searchable by a publicly available \href{https://glasgow-litter.garyblackwood.co.uk}{web application} that allows users to interactively explore a map visualisation. The resulting counts were combined with deprivation indicators provided by the Scottish Index of Multiple Deprivation publication. A Negative Binomial count data regression model was developed to identify the relationships between deprivation and litter. The application of the object detection model produced a 77\% true positive rate over 254 litter objects. This suggests that it may generalise well to unseen data. It was discovered that no deprivation indicators were statistically significant explanatory regression variables at a significance level of $\alpha = 0.05$, although a breakthrough may be possible by overcoming limitations such as data quantity, quality, and hardware resources. The findings indicate that there is no relationship between deprivation and litter in Glasgow City. However, there is uncertainty in this conclusion due to the limitations of the approach taken to quantify litter. By addressing the limitations present, it is acknowledged that there is great potential in using object detection to count litter at scale.
+This study explored the relationship between deprivation in Glasgow City and the amount of litter on its streets. It also aimed to discover if an automated approach to quantifying litter on a city-scale could be achieved using object detection methods. A YOLOv5s object detection model was developed and applied to detect litter in 37,300 Google street view images of locations all over Glasgow City. The detected litter was enumerated and made searchable by a publicly available \href{https://glasgow-litter.garyblackwood.co.uk}{web application} that allows users to interactively explore a map visualisation. The resulting counts were combined with deprivation indicators provided by the Scottish Index of Multiple Deprivation publication. A Negative Binomial count data regression model was developed to identify the relationships between deprivation and litter. The application of the object detection model produced a 77\% true positive rate over 254 littered objects, with only 28 false positives. This suggests that it may generalise well to unseen data. It was discovered that no deprivation indicators were statistically significant explanatory regression variables at a significance level of $\alpha = 0.05$, although a breakthrough may be possible by overcoming limitations such as data quantity, quality, and hardware resources. The findings indicate that there is no relationship between deprivation and the amount of litter in Glasgow City. However, there is uncertainty in this conclusion due to the limitations of the approach taken to quantify litter. By addressing the limitations present, it is acknowledged that there is great potential in using object detection to count litter at scale.
 
 \end{abstract}
 
@@ -320,7 +320,7 @@ A revised version of the January 2020 publication was used for the study, in whi
      \hline
     \end{tabular}
     \hspace{100mm}
-    \caption{Description of the SIMD data zone deprivation indicators.}
+    \caption{A description of the SIMD data zone deprivation indicators.}
     \label{table:simd-deprivation-indicators}
 \end{table}
 
@@ -345,7 +345,7 @@ To answer the questions of interest, the amount of litter in each Glasgow City d
 
 To achieve quantification of litter using object detection, thousands of images depicting the streets of Glasgow City were downloaded from the Google Maps Platform to be used as input to the object detection models. 
 
-Software\footnote{https://github.com/Garee/glasgow-litter/scripts} was developed to obtain the images using the Street View Static API\footnote{https://developers.google.com/maps/documentation/streetview/overview}. Using a Python script, a uniformly random sample of 50 unique locations was generated within each data zone boundary and an image was downloaded at each. Object detection was later performed on these images to count the number of litter objects detected within each data zone. Another Python script counted the instances and combined the counts with the SIMD data set as the response variable. 
+Software\footnote{https://github.com/Garee/glasgow-litter/scripts} was developed to obtain the images using the Street View Static API\footnote{https://developers.google.com/maps/documentation/streetview/overview}. Using a Python script, a uniformly random sample of 50 unique locations was generated within each data zone boundary and an image was downloaded at each. Object detection was later performed on these images to count the number of littered objects detected within each data zone. Another Python script counted the instances and combined the counts with the SIMD data set as the response variable. 
 
 A total of 37,300 images (50 for each data zone) were retrieved at the maximum resolution of 640x640 pixels at a pitch of 0 degrees with a 90-degree field of view from the source camera on the vehicle. The pitch and field of view were chosen to obtain images of what was immediately beside the car as it travelled along the road. This view is ideal for being able to see roadside litter while also showing what is further away from the road. The images returned by Google have human faces and vehicle license plates automatically blurred to protect the privacy of individuals.
 
@@ -362,7 +362,7 @@ The location and details of Glasgow City's 741 public recycling facilities were 
 
 Software was developed to count the number of facilities within each data zone boundary and add them to the SIMD data set as integers such that the count could be used as a potential explanatory variable.
 
-Figure \ref{fig:public-recycling-points-analysis} shows that roughly half of all data zones have no public recycling facilities at all. Those that do typically have between one and four, while a few outliers have up to 11. During later analysis, it was discovered that there did not appear to be a correlation between the number of public recycling facilities and the amount of litter present in a data zone as Pearson's coefficient was 0.027.
+Figure \ref{fig:public-recycling-points-analysis} shows that roughly half of all data zones have no public recycling facilities at all. Those that do typically have between one and four, while a few outliers have up to 11. During later analysis, it was discovered that there did not appear to be a correlation between the number of public recycling facilities and the amount of litter present in a data zone as Pearson's coefficient was 0.013.
 
 \begin{figure}[h!]
     \centering
@@ -389,7 +389,7 @@ To quantify the amount of litter in a data zone, the computer vision technique o
 
 As litter are generally small objects, and as the images were limited to a resolution of 640x640 pixels, it was often impossible to determine the type of litter that was being annotated. For this reason, only a single target class of \textit{litter} was used. Fortunately, this was enough for the goal of quantification. It also avoided the issue of an imbalanced label distribution, in which some classes are significantly more frequent than others.
 
-To maximise the performance of the resulting models it was important to annotate consistently and with consideration. As I was the only individual labelling, the potential variability introduced by the subjectivity of multiple participants was not a worry. A tight box was annotated around the litter, and deposits of multiple litter objects were annotated individually.
+To maximise the performance of the resulting models it was important to annotate consistently and with consideration. As I was the only individual labelling, the potential variability introduced by the subjectivity of multiple participants was not a worry. A tight box was annotated around the litter, and deposits of multiple littered objects were annotated individually.
 
 \subsubsection{Data Split}
 
@@ -397,7 +397,7 @@ The images were split into training, validation and test data sets uniformly at 
 
 The split was taken from the disproportionately stratified sample of 1,219 images containing litter. This was to avoid under-representing the stratum of images containing litter, as most of the 7,260 images do not have any present. As the subsequent regression analysis results depend heavily upon the accuracy of the object detection model, it was important to provide sufficient enough images containing litter to learn from. A consequence of this decision will be to bias the model towards predicting false positives in images that do not contain any litter.
 
-As the validation data set was used heavily during model creation and influenced the chosen model, a separate independent test data set was also held back. This was used to produce evaluation metrics at the end of the study to gauge a sense of how well the final model performs. A non-stratified sample for the test data was taken to compensate for the bias introduced in the training data.
+As the validation data set was used heavily during model creation and influenced the chosen model, a separate independent test data set was also held back. This was used to produce evaluation metrics at the end of the study to gauge a sense of how well the final model performs.
 
 To avoid a train-test bleed in which the test data set is overly similar to the training data set, a Python script was developed and run to verify that there were no duplicate images.
 
@@ -405,7 +405,7 @@ To avoid a train-test bleed in which the test data set is overly similar to the 
 
 Null filter and contrast preprocessing steps were applied to all three data set splits to standardise them\footnote{Image transformations were performed using the online service Roboflow.}. Resizing was not necessary as all images were collected at a resolution of 640x640 pixels. 
 
-To train our model to know that a street view may exist without litter, which is often the case, it was important to include null labelled images in the training data set. This is an important step to reduce false positives. To achieve this, a null filter was applied that guaranteed that at least 80\% of the training data contained labelled litter, while still allowing for those with none. The null labelled images were generated during mosaic augment as described in the next subsection.
+To train our model to know that a street view may exist without litter, which is often the case, it was important to include null labelled images in the training data set. This is an important step to reduce false positives. To achieve this, a null filter was applied that guaranteed that at least 80\% of the training data contained labelled litter, while still allowing for those with none. The null labelled images were generated during mosaic augmentation as described in the next subsection.
 
 A contrast preprocessing step was applied to exaggerate the differences between neighbouring pixels to improve edge detection\cite{roboflow-contrast}. This is helpful as google street view images are not all alike; they are taken at different times of day and in different weather conditions. By adjusting the contrast using adaptive equalisation to smooth the contrast, the resulting model may be more accurate.
 
@@ -422,7 +422,7 @@ Image augmentations were applied to increase the size of the training set. These
 
 The mosaic augmentation combined four source images into one by simulating four random crops while maintaining the relative scale of the litter. It aims to improve performance in terms of translation, and it also varies the amount of litter present in the images. This is because a mosaic image can potentially include litter from multiple other image sources. This was an important augmentation as it greatly increased the number of available training images.
 
-Uniformly sampled noise replaced a maximum of up to 5\% of pixels for any given training image. This aimed to reduce over-fitting by applying variation to the data such that the model can better handle imperfections which are not uncommonly seen in street view images.
+Uniformly sampled noise replaced a maximum of up to 5\% of pixels for any given training image. This aimed to reduce over-fitting by applying variation to the data such that the model can better handle the imperfections that can be encountered in street view images.
 
 \begin{table}[ht!]
     \centering
@@ -465,7 +465,7 @@ All object detection models were created using a personal computer to minimise c
 
 \subsection{YOLO}
 
-Multiple YOLOv5 object detection models were trained and evaluated. This involved iteratively, in batches, improving the way the models mapped images to predictions. Techniques such as transfer learning, hyper-parameter tuning, and the aforementioned data augmentations were performed in an attempt to produce the best training results possible.
+Multiple YOLOv5 object detection models were trained and evaluated. This involved iteratively, in batches, improving the way the models mapped images to predictions. Techniques such as transfer learning, hyper-parameter tuning, and the aforementioned images augmentations were performed in an attempt to produce the best training results possible.
 
 \subsubsection{Transfer Learning}
 
@@ -500,7 +500,7 @@ Hyperparameter tuning was performed in an attempt to choose the optimal set of p
 
 This process was run using the best performing model as a base scenario from which to evolve. The value to maximise, \textit{fitness}, was defined as a weighted combination of metrics: mAP@0.5 contributes 10\% of the weight and mAP@0.5:0.95 contributes the remaining 90\%. A total of 29 hyperparameters are optimised by maximising the fitness. If the metric is greater than the previous evolution, the new offspring is used and the hyperparameter has evolved. 
 
-Due to how expensive this evolution process is only 10 generations were completed. This greatly limited its effectiveness and did not fulfil the recommended minimum of 300 evolutions for best results\cite{yolov5-hyperparam}.
+Due to how expensive this evolution process is only 10 generations were completed. This likely limited its effectiveness as it did not fulfil the recommended minimum of 300 evolutions for best results\cite{yolov5-hyperparam}.
 
 \subsection{Faster R-CNN}
 
@@ -516,7 +516,7 @@ This data analysis began after a final object detection model had been chosen an
 
 \subsubsection{Data Split}
 
-As we are interested in relationships rather than making predictions we can use the entire data set of 746 observations to obtain more precise estimates than a split would allow. However, as we will be using forward stepwise variable selection to hypothesise the significant explanatory variables, we should set aside a test data set to perform inference. If we do not do this, train-test leakage will occur as the data will have already been seen by the model building process during feature selection.
+As we are interested in relationships rather than making predictions we can use the entire data set of 746 observations to obtain more precise estimates than a split would allow. However, as we will be using forward stepwise variable selection to hypothesise the significant explanatory variables, we should set aside a test data set to perform inference. If we do not do this, a train-test leakage will occur as the data will have already been seen by the model building process during feature selection.
 
 The data were split into training and test data sets uniformly at random using an allocation of 80\% and 20\%. The model was trained on the 596 training data observations and the 150 test data observations were used for inference.
 
@@ -557,7 +557,7 @@ Both \textit{income\_count} and \textit{employment\_count} were also identified 
 
 \subsection{Poisson Regression}
 
-The first model $Y \sim Poi(\mu)$ assumes a Poisson distribution where $\mu$ is defined as the number of litter objects detected in fifty street view images. These are the images that were uniformly randomly sampled from a data zone in Glasgow City.
+The first model $Y \sim Poi(\mu)$ assumes a Poisson distribution where $\mu$ is defined as the number of littered objects detected in fifty street view images. These are the images that were uniformly randomly sampled from a data zone in Glasgow City.
 
 Using the eight explanatory variables identified and described during exploratory analysis, forward stepwise feature selection was performed to identify the features which produced the best fit using the Akaike Information Criterion (AIC) as the selection criteria. With the aim of producing easily an interpretable model, the resulting coefficients are outlined in figure \ref{fig:pos-coeff}.
 
@@ -633,7 +633,7 @@ More than 70\% of researchers have tried and failed to reproduce another scienti
 
 The multiple testing problem describes the fact that as our number of tests for significant effects increases, so does the likelihood of a false positive arising. To mitigate against this, Bonferroni Correction was applied to guard against the bias of repeated testing effects. The coefficient p-values were adjusted such that they are unlikely to be significant through random chance. This divides the significance level $\alpha = 0.05$ by the number of tests, which has the unfortunate side effect of decreasing the likelihood that a true effect is detected when true.
 
-After applying Bonferroni Correction \textit{no\_qualifications} is the only remaining significant explanatory variable. However, we cannot conclude from this as we must further test our variable selection hypothesis using the test data set.
+After applying Bonferroni Correction \textit{no\_qualifications} was the only remaining significant explanatory variable. However, we cannot conclude from this as we must further test our variable selection hypothesis using the test data set.
 
 % Results =====================================================================
 
@@ -697,7 +697,7 @@ The chosen YOLO model was used to detect litter using a confidence threshold of 
 
 \subsubsection{Application To Glasgow City}
 
-When applied to the 37,300 images collected within Glasgow City's data zones, 7,732 litter objects were detected. Figure \ref{fig:litter-histogram} shows the number of litter objects detected within fifty uniformly randomly sampled images for each data zone. The count ranges from 0 -- 58 littered objects and the average number per data zone was 10. As these counts are an aggregation over fifty images, less than 40 data zones recorded no litter. Software was developed to add these counts to the SIMD data set as a response variable in preparation for regression.
+When applied to the 37,300 images collected within Glasgow City's data zones, 7,732 littered objects were detected. Figure \ref{fig:litter-histogram} shows the number of littered objects detected within fifty uniformly randomly sampled images for each data zone. The count ranges from 0 -- 58 littered objects and the average number per data zone was 10. As these counts are an aggregation over fifty images, less than 40 data zones recorded no litter. Software was developed to add these counts to the SIMD data set as a response variable in preparation for regression.
 
 Figure \ref{fig:4-in-bush} is an example of the model performing well. It has successfully detected every piece of litter in the image with good accuracy. 
 
@@ -724,13 +724,13 @@ On the other hand, the model is certainly not perfect. Figure \ref{fig:sandbag} 
 \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.6]{images/litter-hist.png}
-    \caption{The number of detected litter objects in each data zone.}
+    \caption{The number of detected littered objects in each data zone.}
     \label{fig:litter-histogram}
 \end{figure}
 
 \subsubsection{Location Generalisation}
 
-The chosen model had a 77\% true positive rate and a 23\% false-negative rate when applied to the test data. Out of 254 labels, 196 were true positives and 58 were false negatives. A further 28 objects were detected as false positives. We should expect one out of every four litter objects to be overlooked by the model. This rate is slightly worse than the result produced using the validation data, but not by much, suggesting that the model may generalise well to unseen data. However, this assumption only holds if the unseen data comes from a location with a similar appearance to Glasgow City. A city's climate and culture will determine its appearance on a street view image. San Francisco does not look the same as Glasgow, and it may not have the same litter.
+The chosen model had a 77\% true positive rate and a 23\% false-negative rate when applied to the test data. Out of 254 labels, 196 were true positives and 58 were false negatives. A further 28 objects were detected as false positives. We should expect one out of every four littered objects to be overlooked by the model. This rate is slightly worse than the result produced using the validation data, but not by much, suggesting that the model may generalise well to unseen data. However, this assumption only holds if the unseen data comes from a location with a similar appearance to Glasgow City. A city's climate and culture will determine its appearance on a street view image. San Francisco does not look the same as Glasgow, and it may not have the same litter.
 
 \begin{figure}[h!]
     \centering
@@ -741,7 +741,7 @@ The chosen model had a 77\% true positive rate and a 23\% false-negative rate wh
 
 Figure \ref{fig:fm-prf1-curve} shows that the model can maintain high precision and recall in which it both accurately detects only litter, while also detecting the majority of it. The maximum F1 metric of 0.85 reinforces this result and it is achieved when the confidence threshold is set to 0.728.
 
-Figure \ref{fig:4-in-bush} is also a good example of the litter detection model working well. It has successfully identified four small litter objects in the scene, without false positives or false negatives. However, it is certainly not perfect and may detect unexpected objects as litter if they appear similar enough. Figure \ref{fig:sandbag} shows the failings of the model as it detects a white roadside sandbag as litter.
+Figure \ref{fig:4-in-bush} is also a good example of the litter detection model working well. It has successfully identified four small littered objects in the scene, without false positives or false negatives. However, it is certainly not perfect and may detect unexpected objects as litter if they appear similar enough. Figure \ref{fig:sandbag} shows the failings of the model as it detects a white roadside sandbag as litter.
 
 
 \newpage
@@ -840,7 +840,7 @@ Every image used for training and inference was collected from Google street vie
 
 \subsection{Zero Inflated Models}
 
-As roughly one in twenty data zones had zero litter objects detected within them, a zero-inflated model may produce better regression results. This type of statistical model is based on a distribution that allows for frequent zero-valued observations. It allows for a separate statistical process to determine the zero and non-zero counts. Both Poisson and Negative Binomial models have zero-inflated variants that allow for overdispersion and could be applied and evaluated.
+As roughly one in twenty data zones had zero littered objects detected within them, a zero-inflated model may produce better regression results. This type of statistical model is based on a distribution that allows for frequent zero-valued observations. It allows for a separate statistical process to determine the zero and non-zero counts. Both Poisson and Negative Binomial models have zero-inflated variants that allow for overdispersion and could be applied and evaluated.
 
 \subsection{Longitudinal Analysis}
 
@@ -856,9 +856,9 @@ Enhancements to the companion web application could be made to increase the amou
 
 \section{Conclusion}
 
-This study aimed to identify the relationships between the key indicators of deprivation in areas of Glasgow City and the amount of litter on its streets. Initial exploratory data analysis suggested that these relationships may indeed exist. However, after performing count data regression it was discovered that none of the potential explanatory indicators were statistically significant, even though the goodness-of-fit statistic for the regression model met the required threshold.
+This study aimed to identify the relationships between the key indicators of deprivation in areas of Glasgow City and the amount of litter on its streets. Initial exploratory data analysis suggested that these relationships may indeed exist. However, after performing count data regression it was discovered that none of the potential explanatory indicators were statistically significant at $\alpha = 0.05$, even though the goodness-of-fit statistic for the regression model met the required threshold.
 
-It was also of interest to discover if an automated approach to counting litter on a city-scale could be achieved using deep learning object detection methods. A YOLOv5s object detection model was developed to detect litter within Google street view images of Glasgow City. After confirming the feasibility of collecting such images at a large scale, the model was successfully applied to 37,300 images. The results establish that there is good potential for this approach to be scaled up. Scaling may include increasing the number of images the model is applied to, the number of locations it is used for, and the frequency of application. Furthermore, by holding out a test data set that produced a 77\% true positive rate, it was discovered that the detection model generalises reasonably well to new data.
+It was also of interest to discover if an automated approach to counting litter on a city-scale could be achieved using deep learning object detection methods. A YOLOv5s object detection model was developed to detect litter within Google street view images of Glasgow City. After confirming the feasibility of collecting such images at a large scale, the model was successfully applied to 37,300 images. The results establish that there is good potential for this approach to be scaled up. Scaling may include increasing the number of images the model is applied to, the number of locations it is used for, and the frequency of application. Furthermore, by holding out a test data set that produced a 77\% true positive rate over 254 littered objects, it was discovered that the detection model generalises reasonably well to new data.
 
 Litter is undoubtedly an important indicator of environmental quality\cite{household-survey-2019}. Even though no link with deprivation could be established presently, if local organisations were able to apply these methods throughout the country, perhaps progress could be made in reducing litter and discovering its causes. This would be a welcome step towards a cleaner world.
 
@@ -870,25 +870,25 @@ Litter is undoubtedly an important indicator of environmental quality\cite{house
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.375]{images/good-three.jpg}
+    \includegraphics[scale=0.5]{images/good-three.jpg}
     \caption{Litter detection example: A few littered objects next to the pavement.}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.375]{images/good-two-bottles.jpg}
+    \includegraphics[scale=0.5]{images/good-two-bottles.jpg}
     \caption{Litter detection example: Two plastic bottles on the road.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.45]{images/flaw-road-marking.jpg}
+    \includegraphics[scale=0.5]{images/flaw-road-marking.jpg}
     \caption{Litter detection example: A white lane separator road marking.}
 \end{figure}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.45]{images/flaw-tree-leaves.jpg}
+    \includegraphics[scale=0.5]{images/flaw-tree-leaves.jpg}
     \caption{Litter detection example: Leaves that have fallen from a nearby tree.}
 \end{figure}
 
