docs: add docs to regression

--- a/regression/regression.ipynb
+++ b/regression/regression.ipynb
@@ -938,6 +938,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Train\n",
+    "\n",
+    "We will only use the training data set to develop a chosen regression model before using the test data to infer from it.\n",
+    "\n",
     "### Correlations\n",
     "\n",
     "The positive correlations (>= .3) are no_qualifications, income_rate, CIF, employment_rate, EMERG, DEPRESS, SMR and ALCOHOL.\n",
